Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_dotnetazurewebapp95.yml
+++ b/.github/workflows/master_dotnetazurewebapp95.yml
@@ -40,12 +40,21 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: .net-app
+      
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_01A1B7169B66414F95B1F9C39A089A8B }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_C25D3AB6C13244208C81B89D786AAA04 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_DE729651D3C34CED9792265E0086965B }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -53,5 +62,5 @@ jobs:
         with:
           app-name: 'dotNetAzureWebApp95'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_4CCB99CD3DB8428392D8746B7782349A }}
           package: .
+          
